[gd_scene load_steps=2 format=3 uid="uid://coo2h1mk7d78j"]

[ext_resource type="Script" uid="uid://bbnv7wcsgsfbo" path="res://scripts/main_menu.gd" id="1_yqorp"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_yqorp")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="Control"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="ContinueButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="NewGameButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SettingsButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="QuitButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
